test/files/parser/errors/incomplete-assign.organic
// Incomplete assign
// 5 ~ 1 ~ Expected expression term, received "".

test =
